# CommonProjects

./: CMakeLists.txt  main.cpp  run
Help/: Error.hpp  FastDraw.hpp  Picture.hpp
Integral/: README.md  a.out  experimental.hpp  format.py  main.cpp
MPI_MathGrid/: CMakeLists.txt  README.md  accessToLab.cpp  def.h  helper.h  lab.md  main.cpp
MPI_Put/: main.cpp
Map/: CMakeLists.txt  Hero.cpp  Hero.hpp  Map.cpp  Map.hpp
OpenCL_BitSort/: CMakeLists.txt  main.cpp  tests.cpp
OpenCL_BitSort/BSort/: BSort.cpp  BSort.hpp
OpenCL_BitSort/Common_libs/: Arrays.hpp  Color.hpp  Errors.hpp  Iterators.hpp
OpenCL_BitSort/Common_libs/Matrix/: Buffer.hpp  Matrix.cpp  Matrix.hpp  Matrix_Class.hpp
OpenCL_BitSort/Common_libs/Random/: Random.cpp  Random.hpp
OpenCL_BitSort/Common_libs/Time/: Time.cpp  Time.hpp
OpenCL_BitSort/TESTS/: test_checking.cpp  tests_creater.cpp
Pthreads/: Hello.cpp  Mutex.cpp  Sum.cpp  a.out
Sort/: CMakeLists.txt  def.h  ex.cpp  helper.h  main.cpp
Sort/tests/: 1.txt
